@@ -49,7 +49,11 @@
                         <td align="right"><a class="auth" href="/auth.xsl">Login</a></td>
                     </xsl:when>
                     <xsl:otherwise>
-                        <td align="right"> <a href="{@mount}.m3u">M3U</a> <a href="{@mount}.xspf">XSPF</a></td>
+                        <td align="right">
+                            <a href="{@mount}.m3u">M3U</a>
+                            <a href="{@mount}.xspf">XSPF</a>
+                            <a href="{@mount}.vclt">VCLT</a>
+                        </td>
                     </xsl:otherwise>
                 </xsl:choose>
         </tr></table>
