@@ -1,3 +1,8 @@
+2011-11-26 02:36  ph3-der-loewe
+
+	* trunk/icecast/src/fserve.c, trunk/icecast/admin/vclt.xsl,
+	  trunk/icecast/web/status.xsl: Added VCLT playlist support.
+
 2011-11-25 22:37  dm8tbr
 
 	* trunk/icecast/conf/icecast.xml.in:
